--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apidoc",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "RESTful web API Documentation Generator",
   "author": "Peter Rottmann <rottmann@inveris.de>",
   "license": "MIT",
@@ -31,10 +31,10 @@
     "colors": "~0.6.0-1"
   },
   "devDependencies": {
-    "grunt": "~0.4.0rc7",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jshint": "~0.1.1rc6",
-    "grunt-simple-mocha": "~0.3.2",
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-simple-mocha": "~0.4.0",
     "should": "~1.2.2"
   }
 }
