--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "apidoc",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "RESTful web API Documentation Generator",
   "author": "Peter Rottmann <rottmann@inveris.de>",
-  "license": "MIT",
+  "preferGlobal": true,
+  "homepage": "http://apidocjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/apidoc/apidoc.git"
+  },
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/apidoc/apidoc/blob/master/LICENSE.md"
+  },
+  "bugs": {
+    "url": "https://github.com/apidoc/apidoc/issues"
   },
   "main": "./lib/apidoc",
   "bin": "bin/apidoc",
@@ -22,19 +30,20 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "wrench": "~1.5.8",
-    "underscore": "~1.6.0",
-    "semver": "~2.2.1",
-    "lodash": "~2.4.1",
-    "optimist": "~0.6.1",
     "colors": "~0.6.2",
-    "marked": "~0.3.1"
+    "fs-extra": "^0.9.1",
+    "lodash": "~2.4.1",
+    "marked": "~0.3.2",
+    "optimist": "~0.6.1",
+    "semver": "~2.3.0",
+    "underscore": "~1.6.0",
+    "wrench": "~1.5.8"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-simple-mocha": "~0.4.0",
-    "should": "~3.1.3"
+    "should": "~4.0.1"
   }
 }
