--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "colors": "~0.6.2",
-    "fs-extra": "^0.9.1",
+    "fs-extra": "~0.9.1",
     "lodash": "~2.4.1",
     "marked": "~0.3.2",
     "optimist": "~0.6.1",
