--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "wrench": "~1.5.8"
   },
   "devDependencies": {
+    "coveralls": "^2.11.1",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-simple-mocha": "~0.4.0",
+    "istanbul": "^0.3.2",
+    "mocha": "^1.21.4",
     "should": "~4.0.1"
   }
 }
