--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "~2.4.1",
     "marked": "~0.3.2",
     "optimist": "~0.6.1",
+    "requirejs": "~2.1.15",
     "semver": "~2.3.0",
     "underscore": "~1.6.0",
     "wrench": "~1.5.8"
