--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apidoc",
-  "version": "0.13.2",
+  "version": "0.14.0",
   "description": "RESTful web API Documentation Generator",
   "author": "Peter Rottmann <rottmann@inveris.de>",
   "license": {
@@ -36,7 +36,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "apidoc-core": "~0.4.2",
+    "apidoc-core": "~0.5.0",
     "fs-extra": "~0.26.2",
     "lodash": "~3.10.1",
     "markdown-it": "^5.0.2",
@@ -45,12 +45,14 @@
   },
   "devDependencies": {
     "apidoc-example": "*",
+    "js-cookie": "^2.0.4",
     "jshint": "^2.9.1-rc1",
     "mocha": "~2.3.4",
     "npm-check-updates": "^2.5.4",
     "path-to-regexp": "^1.2.1",
     "semver": "^5.1.0",
-    "should": "~8.0.1"
+    "should": "~8.0.1",
+    "webfontloader": "^1.6.16"
   },
   "jshintConfig": {
     "camelcase": true,
