--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "apidoc",
-  "version": "0.14.0",
+  "name": "apidoc-support-socketio",
+  "version": "0.1.0",
   "description": "RESTful web API Documentation Generator",
-  "author": "Peter Rottmann <rottmann@inveris.de>",
+  "author": {
+    "name": "Alfred UC",
+    "email": "b6pzeusbc54tvhw5jgpyw8pwz2x6gs@gmail.com"
+  },
   "license": {
-    "type": "MIT",
-    "url": "https://github.com/apidoc/apidoc/blob/master/LICENSE"
+    "type": "MIT"
   },
   "preferGlobal": true,
   "bin": "bin/apidoc",
@@ -13,10 +15,10 @@
   "homepage": "http://apidocjs.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apidoc/apidoc.git"
+    "url": "https://github.com/b6pzeusbc54tvhw5jgpyw8pwz2x6gs/apidoc-support-socketio"
   },
   "bugs": {
-    "url": "https://github.com/apidoc/apidoc/issues"
+    "url": "https://github.com/b6pzeusbc54tvhw5jgpyw8pwz2x6gs/apidoc-support-socketio/issues"
   },
   "scripts": {
     "test": "npm run jshint && mocha test/",
@@ -27,6 +29,8 @@
   "keywords": [
     "api",
     "apidoc",
+    "socketio",
+    "apidoc socket",
     "doc",
     "documentation",
     "rest",
