--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   },
   "dependencies": {
     "apidoc-core": "~0.8.2",
+    "commander": "^2.19.0",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.10",
     "markdown-it": "^8.3.1",
-    "nomnom": "~1.8.1",
     "winston": "^3.0.0"
   },
   "devDependencies": {
