Update bootstrap to 3.4.1 and make the page more responsive
Fix #264

At the moment the files are manually copied to the template/vendor dir
but the next steps would be to use the latest versions of all the
libraries in template/vendor and to build bundles with webpack.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "apidoc-example": "*",
+    "bootstrap": "3.4.1",
     "jshint": "^2.9.4",
     "lodash-cli": "^4.17.5",
     "mocha": "~6.2.1",
