--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
+    "nodemon": "^2.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
