--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apidoc-core": "^0.11.1",
     "commander": "^2.20.0",
     "fs-extra": "^8.1.0",
+    "handlebars": "^4.7.6",
     "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
     "nodemon": "^2.0.2",
