make outputs more noisy

--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm i
-      - run: npm run jshint
+      - run: npm run jshint --verbose
