--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "npm run jshint && mocha test/",
     "jshint": "jshint lib/ test/",
-    "build-example": "bin/apidoc -i example/ -o tmp/",
+    "build-example": "bin/apidoc -v -i example/ -o tmp/",
     "update-lodash": "./node_modules/lodash-cli/bin/lodash -p -o template/vendor/lodash.custom.min.js include=get,set,groupBy,each,extend,some,isNaN exports=amd"
   },
   "keywords": [
