--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm i
-      - run: npm run test
+      - run: mocha --colors test/
   run-jshint:
     runs-on: ubuntu-latest
     steps:
