--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "markdown-it": "^11.0.0",
     "nodemon": "^2.0.4",
     "requirejs": "^2.3.6",
+    "webfontloader": "^1.6.28",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -59,7 +60,6 @@
     "lodash-cli": "^4.17.5",
     "mocha": "^9.1.1",
     "path-to-regexp": "^3.2.0",
-    "semver": "^7.3.2",
-    "webfontloader": "^1.6.28"
+    "semver": "^7.3.2"
   }
 }
