fix npm run test to run all tests
See: https://medium.com/@jakubsynowiec/you-should-always-quote-your-globs-in-npm-scripts-621887a2a784

--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm i
-      - run: npx mocha --colors test/**/*_test.js
+      - run: npm run test
   run-eslint:
     runs-on: ubuntu-latest
     steps:
