--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/apidoc/apidoc/issues"
   },
   "scripts": {
-    "test": "mocha --colors 'test/**/*_test.js'",
+    "test": "mocha --colors --no-package --no-config 'test/**/*_test.js'",
     "eslint": "./node_modules/.bin/eslint lib bin/apidoc template",
     "build-example": "./bin/apidoc -v -i example/ -o /tmp/apidoc-output",
     "update-lodash": "./node_modules/lodash-cli/bin/lodash -p -o template/vendor/lodash.custom.min.js include=get,set,groupBy,each,extend,some,isNaN exports=amd",
