--- a/.github/workflows/build-example.yml
+++ b/.github/workflows/build-example.yml
@@ -6,6 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: npm i
+      - run: npm ci
       - run: npm run build-example
-  
