--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "iconv-lite": "^0.6.3",
-    "jquery": "3.5.1",
+    "jquery": "^3.6.0",
     "klaw-sync": "^6.0.0",
     "lodash": "^4.17.20",
     "markdown-it": "^12.0.0",
