--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -3,9 +3,17 @@ on: [push, pull_request]
 jobs:
   run-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '14', '16' ]
+    name: Node ${{ matrix.node }} test
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - name: Run tests
