--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm run test
       - name: Run linter
         run: npm run eslint
+      - name: Build example
+        run: npm run build-example
