--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -13,7 +13,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-          cache: 'apparentlythereisnowaytoclearthecachefromthewebinterface'
+          cache: 'npm'
+          key: 'yep'
       - name: Install dependencies
         run: npm ci
       - name: Run tests
