--- a/.github/workflows/validating.yml
+++ b/.github/workflows/validating.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - name: Run tests
