--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prismjs": "^1.24.1",
     "semver": "^7.3.2",
     "style-loader": "^3.2.1",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "winston": "^3.3.3"
   },
