--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/node": "^16.9.1",
     "eslint": "^7.32.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-config-standard": "^16.0.3",
