--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
       "checkJs": true,
-      "resolveJsonModule": true
-  }
+      "resolveJsonModule": true,
+      "esModuleInterop": true
+  },
+  "exclude": ["node_modules", "doc", "tmp"]
 }
