--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build-example": "./bin/apidoc -v -i example/ -o /tmp/apidoc-output",
     "build-devxample": "./bin/apidoc -v -i example/ -o /tmp/apidoc-output --debug",
-    "eslint": "./node_modules/.bin/eslint lib bin/apidoc template/src",
+    "eslint": "./node_modules/.bin/eslint --ext js,mjs lib bin/apidoc template/src",
     "pre-commit": "npm run eslint && npm run test",
     "serve": "npm run build-example && docker run --rm --name apidoc -p 8080:80 -v /tmp/apidoc-output:/usr/share/nginx/html:ro -d nginx",
     "test": "mocha --colors --no-package --no-config 'test/**/*_test.*js'"
