--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "lodash": "^4.17.20",
     "markdown-it": "^12.0.0",
     "nodemon": "^2.0.4",
-    "path-to-regexp": "^3.2.0",
+    "path-to-regexp": "^6.2.0",
     "prismjs": "^1.24.1",
     "semver": "^7.3.2",
     "style-loader": "^3.2.1",
+    "url-parse": "^1.5.3",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "winston": "^3.3.3"
