--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,17 @@
 node_modules/
 test/
 tmp/
+.dockerignore
+.editorconfig
+.eslintrc.js
 .gitignore
+.github/
 .npmignore
 npm-debug.log
+CHANGELOG.md
+CONTRIBUTING.md
+CONTRIBUTORS.md
+Dockerfile
+example/
+jsconfig.json
+SECURITY.md
