feat(template): Massiv build performance speed-up with esbuild-loader.\nfix: Update deps.

--- a/package.json
+++ b/package.json
@@ -43,37 +43,38 @@
   ],
   "dependencies": {
     "bootstrap": "3.4.1",
-    "commander": "^8.1.0",
+    "commander": "^8.3.0",
     "diff-match-patch": "^1.0.5",
-    "expose-loader": "^3.0.0",
+    "esbuild-loader": "^2.16.0",
+    "expose-loader": "^3.1.0",
     "fs-extra": "^10.0.0",
-    "glob": "^7.1.7",
+    "glob": "^7.2.0",
     "handlebars": "^4.7.7",
     "iconv-lite": "^0.6.3",
     "jquery": "^3.6.0",
     "klaw-sync": "^6.0.0",
-    "lodash": "^4.17.20",
-    "markdown-it": "^12.0.0",
-    "nodemon": "^2.0.4",
+    "lodash": "^4.17.21",
+    "markdown-it": "^12.2.0",
+    "nodemon": "^2.0.15",
     "path-to-regexp": "^6.2.0",
-    "prismjs": "^1.24.1",
-    "semver": "^7.3.2",
-    "style-loader": "^3.2.1",
+    "prismjs": "^1.25.0",
+    "semver": "^7.3.5",
+    "style-loader": "^3.3.1",
     "url-parse": "^1.5.3",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.177",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.1",
-    "eslint": "^7.32.0",
+    "@types/node": "^16.11.9",
+    "eslint": "^8.3.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "mocha": "^9.1.1"
+    "eslint-plugin-promise": "^5.1.1",
+    "mocha": "^9.1.3"
   }
 }
