--- a/package.json
+++ b/package.json
@@ -56,11 +56,10 @@
     "lodash": "^4.17.21",
     "markdown-it": "^12.2.0",
     "nodemon": "^2.0.15",
-    "path-to-regexp": "^6.2.0",
     "prismjs": "^1.25.0",
     "semver": "^7.3.5",
     "style-loader": "^3.3.1",
-    "url-parse": "^1.5.3",
+    "url-polyfill": "^1.1.12",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
     "winston": "^3.3.3"
